# historicoAluno

./: .gitignore  CMakeLists.txt  InterfaceComUsuario.md  LICENSE  Makefile  README.md  app.conf.example  app.config.example  arquitetura.md  patterns.md  principal.cpp  tree.txt  visao_escopo.md
exemplos/: historico00.in  historico01.in  historico02.in  historico03.in  historico04.in  historico05.in
headers/: disciplina.hpp  historico.hpp  menu.hpp  utils.hpp
headers/views/: IUI.hpp  UIConsole.hpp  UIConsoleMaisOuMenos.hpp  UIConsoleTosca.hpp  tela.hpp  tela_formulario.hpp  tela_lista.hpp  tela_menu.hpp  tela_message.hpp  terminal.hpp
include/core/: Configuracao.hpp  Conversion.hpp  Errors.hpp  Uteis.hpp
include/entities/: Disciplina.hpp
include/logging/: ILogger.hpp
include/repositories/: IDisciplinaRepository.hpp
include/services/: IHistoricoService.hpp
include/uis/: IUserInterface.hpp
src/: disciplina.cpp  historico.cpp  main.cpp  menu.cpp  utils.cpp
src/core/: Configuracao.cpp  Conversion.cpp  Uteis.cpp
src/entities/: Disciplina.cpp
src/logging/: ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp
src/repositories/csv/: CMakeLists.txt  CsvDisciplinaRepository.cpp  CsvDisciplinaRepository.hpp
src/repositories/fixed/: CMakeLists.txt  FixedDisciplinaRepository.cpp  FixedDisciplinaRepository.hpp
src/repositories/json/: CMakeLists.txt  JsonDisciplinaRepository.cpp  JsonDisciplinaRepository.hpp
src/repositories/memory/: CMakeLists.txt  MemoryDisciplinaRepository.cpp  MemoryDisciplinaRepository.hpp
src/repositories/sqlite/: CMakeLists.txt  SQLiteDisciplinaRepository.cpp  SQLiteDisciplinaRepository.hpp
src/repositories/xml/: CMakeLists.txt  XmlDisciplinaRepository.cpp  XmlDisciplinaRepository.hpp
src/services/: HistoricoService.cpp  HistoricoService.hpp
src/uis/console/: CMakeLists.txt  UIConsole.cpp  UIConsole.hpp
src/uis/cpp-terminal/: CMakeLists.txt  CppTermConfirmDialog.cpp  CppTermConfirmDialog.hpp  CppTermDisciplinaForm.cpp  CppTermDisciplinaForm.hpp  CppTermHomeScreen.cpp  CppTermHomeScreen.hpp  CppTermMessageDialog.cpp  CppTermMessageDialog.hpp  CppTermTypes.hpp  CppTermWindowUtils.cpp  CppTermWindowUtils.hpp  UICppTerminal.cpp  UICppTerminal.hpp  readme.md
src/uis/ftxui/: CMakeLists.txt  FtxuiAppState.cpp  FtxuiAppState.hpp  FtxuiConfirmDialog.cpp  FtxuiConfirmDialog.hpp  FtxuiDisciplinaForm.cpp  FtxuiDisciplinaForm.hpp  FtxuiHomeScreen.cpp  FtxuiHomeScreen.hpp  FtxuiMessageDialog.cpp  FtxuiMessageDialog.hpp  FtxuiTableUtils.cpp  FtxuiTableUtils.hpp  UIFtxui.cpp  UIFtxui.hpp
src/uis/iup/: CMakeLists.txt  IupConfirmDialog.cpp  IupConfirmDialog.hpp  IupDisciplinaFormDialog.cpp  IupDisciplinaFormDialog.hpp  IupHelpers.cpp  IupHelpers.hpp  IupHomeWindow.cpp  IupHomeWindow.hpp  IupMessageDialog.cpp  IupMessageDialog.hpp  UIIup.cpp  UIIup.hpp  readme.md
src/uis/terminal/: CMakeLists.txt  IUITerminalForm.hpp  UITerminal.cpp  UITerminal.hpp  UITerminalForm.cpp  UITerminalForm.hpp  UITerminalList.cpp  UITerminalList.hpp  UITerminalMenu.cpp  UITerminalMenu.hpp  UITerminalMessage.cpp  UITerminalMessage.hpp  terminal.cpp
src/uis/web/: CMakeLists.txt  UIWeb.cpp  UIWeb.hpp
src/uis/web/www/: app.js  index.html  styles.css
src/views/: UIConsole.cpp  UIConsoleMaisOuMenos.cpp  UIConsoleTosca.cpp  menu.cpp  tela_formulario.cpp  tela_lista.cpp  tela_menu.cpp  tela_message.cpp
